--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -52,21 +52,19 @@ p {
 }
 
 .content {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
     margin: 82px auto 32px;
     padding: 0 16px;
     max-width: 960px;
     flex-direction: column;
-    align-items: center;
 }
   
   .spacer {
     flex-grow: 1;
   }
-  
-  .content {
-    padding: 20px;
-  }
+
   
   .validate-section {
     margin-bottom: 20px;
@@ -74,6 +72,13 @@ p {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
     border-radius: 13px;
     padding: 20px;
+  }
+
+  .validate-section-2 {
+    margin-bottom: 20px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+    border-radius: 13px;
   }
   
   .validate-section h2 {
