--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,54 +1,3 @@
-<!-- Toolbar -->
-<div class="toolbar">
-  <span class="title">Holiday Validator</span>
-  <div class="spacer"></div>
-</div>
-
-<div class="content" role="main">
-
-  <!-- Validar por Fecha -->
-  <div class="validate-section-2">
-    <h2>Validar por fecha</h2>
-    <div class="validate-date">
-      <input placeholder="Select a date" type="date" #dateInput />
-      <button (click)="validateDate(dateInput.value)">Validar</button>
-    </div>
-  </div>
-
-
-  <!-- Validar por Año -->
-  <div class="validate-section">
-    <h2>Listar Festivos</h2>
-    <div class="validate-year">
-      <select #yearSelect>
-        <!-- Itera sobre el arreglo de años -->
-        <option *ngFor="let year of years" [value]="year">{{ year }}</option>
-      </select>
-      <button (click)="validateYear(yearSelect)">Listar</button>
-    </div>
-
-    <div class="table-container">
-      <table mat-table [dataSource]="dataSource">
-        <!-- Columnas de la tabla -->
-        <ng-container matColumnDef="nombre">
-          <th mat-header-cell *matHeaderCellDef>Nombre</th>
-          <td mat-cell *matCellDef="let holiday">{{ holiday.nombre }}</td>
-        </ng-container>
-        <ng-container matColumnDef="dia">
-          <th mat-header-cell *matHeaderCellDef>Día</th>
-          <td mat-cell *matCellDef="let holiday">{{ holiday.dia < 10 ? '0' + holiday.dia : holiday.dia }}</td>
-        </ng-container>
-        <ng-container matColumnDef="mes">
-          <th mat-header-cell *matHeaderCellDef>Mes</th>
-          <td mat-cell *matCellDef="let holiday">{{ holiday.mes < 10 ? '0' + holiday.mes : holiday.mes }}</td>
-        </ng-container>
-    
-        <!-- Filas de la tabla -->
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-      <mat-paginator [pageSizeOptions]="[5]" showFirstLastButtons></mat-paginator>
-  </div>
-
-</div>
+<app-toolbar></app-toolbar>
+<app-home></app-home>
 
